--- a/speak.ui
+++ b/speak.ui
@@ -104,5 +104,25 @@ p, li { white-space: pre-wrap; }
   </widget>
  </widget>
  <resources/>
- <connections/>
+ <connections>
+  <connection>
+   <sender>startbutton</sender>
+   <signal>clicked()</signal>
+   <receiver>Form</receiver>
+   <slot>nextResult()</slot>
+   <hints>
+    <hint type="sourcelabel">
+     <x>257</x>
+     <y>410</y>
+    </hint>
+    <hint type="destinationlabel">
+     <x>328</x>
+     <y>452</y>
+    </hint>
+   </hints>
+  </connection>
+ </connections>
+ <slots>
+  <slot>nextResult()</slot>
+ </slots>
 </ui>
