--- a/sub.ui
+++ b/sub.ui
@@ -181,7 +181,7 @@ p, li { white-space: pre-wrap; }
 &lt;p align=&quot;center&quot; style=&quot; margin-top:0px; margin-bottom:0px; margin-left:0px; margin-right:0px; -qt-block-indent:0; text-indent:0px;&quot;&gt;단어 or 문장&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
      </property>
     </widget>
-    <widget class="QPushButton" name="button_result">
+    <widget class="QPushButton" name="button_startrecord">
      <property name="geometry">
       <rect>
        <x>360</x>
@@ -218,6 +218,25 @@ p, li { white-space: pre-wrap; }
 p, li { white-space: pre-wrap; }
 &lt;/style&gt;&lt;/head&gt;&lt;body style=&quot; font-family:'Gulim'; font-size:9pt; font-weight:400; font-style:normal;&quot;&gt;
 &lt;p align=&quot;center&quot; style=&quot; margin-top:0px; margin-bottom:0px; margin-left:0px; margin-right:0px; -qt-block-indent:0; text-indent:0px;&quot;&gt;현재 데시벨 제공&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
+     </property>
+    </widget>
+    <widget class="QPushButton" name="button_stoprecord">
+     <property name="geometry">
+      <rect>
+       <x>360</x>
+       <y>320</y>
+       <width>80</width>
+       <height>80</height>
+      </rect>
+     </property>
+     <property name="autoFillBackground">
+      <bool>false</bool>
+     </property>
+     <property name="styleSheet">
+      <string notr="true">border-image:url(:/record_button/free-icon-voice-3687408.png)</string>
+     </property>
+     <property name="text">
+      <string/>
      </property>
     </widget>
    </widget>
@@ -462,8 +481,8 @@ p, li { white-space: pre-wrap; }
    <zorder>mainwindow</zorder>
    <zorder>checknoise</zorder>
    <zorder>result</zorder>
-   <zorder>resultnoise</zorder>
    <zorder>selectsexual</zorder>
+   <zorder>resultnoise</zorder>
   </widget>
   <widget class="QMenuBar" name="menubar">
    <property name="geometry">
