ui result 이미지 변경 및 버튼 크기 수정

--- a/button.qrc
+++ b/button.qrc
@@ -2,6 +2,9 @@
   <qresource prefix="start_button">
     <file>icons/free-icon-start-button-5261874.png</file>
   </qresource>
+  <qresource prefix="result">
+    <file>icons/result.jpg</file>
+  </qresource>
   <qresource prefix="record_button">
     <file>icons/free-icon-voice-recording-3444418.png</file>
     <file>icons/free-icon-voice-3687408.png</file>
