--- a/sub.ui
+++ b/sub.ui
@@ -61,53 +61,13 @@ p, li { white-space: pre-wrap; }
 &lt;p align=&quot;center&quot; style=&quot; margin-top:0px; margin-bottom:0px; margin-left:0px; margin-right:0px; -qt-block-indent:0; text-indent:0px;&quot;&gt;유사도 안내 : 90%&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
      </property>
     </widget>
-    <widget class="QTextBrowser" name="check_word_5">
-     <property name="geometry">
-      <rect>
-       <x>290</x>
-       <y>140</y>
-       <width>220</width>
-       <height>30</height>
-      </rect>
-     </property>
-     <property name="autoFillBackground">
-      <bool>true</bool>
-     </property>
-     <property name="html">
-      <string>&lt;!DOCTYPE HTML PUBLIC &quot;-//W3C//DTD HTML 4.0//EN&quot; &quot;http://www.w3.org/TR/REC-html40/strict.dtd&quot;&gt;
-&lt;html&gt;&lt;head&gt;&lt;meta name=&quot;qrichtext&quot; content=&quot;1&quot; /&gt;&lt;style type=&quot;text/css&quot;&gt;
-p, li { white-space: pre-wrap; }
-&lt;/style&gt;&lt;/head&gt;&lt;body style=&quot; font-family:'Gulim'; font-size:9pt; font-weight:400; font-style:normal;&quot;&gt;
-&lt;p align=&quot;center&quot; style=&quot; margin-top:0px; margin-bottom:0px; margin-left:0px; margin-right:0px; -qt-block-indent:0; text-indent:0px;&quot;&gt;인식된 발음 : 단어 or 문장&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
-     </property>
-    </widget>
-    <widget class="QTextBrowser" name="check_word_6">
-     <property name="geometry">
-      <rect>
-       <x>300</x>
-       <y>60</y>
-       <width>200</width>
-       <height>31</height>
-      </rect>
-     </property>
-     <property name="autoFillBackground">
-      <bool>true</bool>
-     </property>
-     <property name="html">
-      <string>&lt;!DOCTYPE HTML PUBLIC &quot;-//W3C//DTD HTML 4.0//EN&quot; &quot;http://www.w3.org/TR/REC-html40/strict.dtd&quot;&gt;
-&lt;html&gt;&lt;head&gt;&lt;meta name=&quot;qrichtext&quot; content=&quot;1&quot; /&gt;&lt;style type=&quot;text/css&quot;&gt;
-p, li { white-space: pre-wrap; }
-&lt;/style&gt;&lt;/head&gt;&lt;body style=&quot; font-family:'Gulim'; font-size:9pt; font-weight:400; font-style:normal;&quot;&gt;
-&lt;p align=&quot;center&quot; style=&quot; margin-top:0px; margin-bottom:0px; margin-left:0px; margin-right:0px; -qt-block-indent:0; text-indent:0px;&quot;&gt;결과 확인&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
-     </property>
-    </widget>
     <widget class="QPushButton" name="button_exit">
      <property name="geometry">
       <rect>
-       <x>440</x>
-       <y>340</y>
-       <width>40</width>
-       <height>40</height>
+       <x>500</x>
+       <y>320</y>
+       <width>80</width>
+       <height>80</height>
       </rect>
      </property>
      <property name="styleSheet">
@@ -120,10 +80,10 @@ p, li { white-space: pre-wrap; }
     <widget class="QPushButton" name="button_rerecord">
      <property name="geometry">
       <rect>
-       <x>320</x>
-       <y>340</y>
-       <width>40</width>
-       <height>40</height>
+       <x>220</x>
+       <y>320</y>
+       <width>80</width>
+       <height>80</height>
       </rect>
      </property>
      <property name="styleSheet">
@@ -131,6 +91,19 @@ p, li { white-space: pre-wrap; }
      </property>
      <property name="text">
       <string/>
+     </property>
+    </widget>
+    <widget class="QWidget" name="widget" native="true">
+     <property name="geometry">
+      <rect>
+       <x>230</x>
+       <y>20</y>
+       <width>340</width>
+       <height>140</height>
+      </rect>
+     </property>
+     <property name="styleSheet">
+      <string notr="true">border-image:url(:/result/icons/result.jpg)</string>
      </property>
     </widget>
    </widget>
@@ -517,9 +490,9 @@ p, li { white-space: pre-wrap; }
    <zorder>loading</zorder>
    <zorder>checknoise</zorder>
    <zorder>mainwindow</zorder>
-   <zorder>result</zorder>
    <zorder>resultnoise</zorder>
    <zorder>selectsexual</zorder>
+   <zorder>result</zorder>
   </widget>
   <widget class="QMenuBar" name="menubar">
    <property name="geometry">
