--- a/button.qrc
+++ b/button.qrc
@@ -2,6 +2,20 @@
   <qresource prefix="start_button">
     <file>icons/free-icon-start-button-5261874.png</file>
   </qresource>
+  <qresource prefix="noise">
+    <file>icons/free-icon-noise-12299217.png</file>
+  </qresource>
+  <qresource prefix="woman">
+    <file>icons/checked_woman.png</file>
+    <file>icons/unchecked_woman.png</file>
+  </qresource>
+  <qresource prefix="man">
+    <file>icons/checked_man.png</file>
+    <file>icons/unchecked_man.png</file>
+  </qresource>
+  <qresource prefix="background">
+    <file>icons/galaxy.jpg</file>
+  </qresource>
   <qresource prefix="result">
     <file>icons/result.jpg</file>
   </qresource>
